# StellarSwipe-Contract

./: IMPLEMENTATION_SUMMARY.md
.github/workflows/: ci.yml
docs/: AUTHORIZATION_IMPLEMENTATION.md  CATEGORIZATION_TAGGING.md  VALIDATION_CHECKLIST.md
stellar-swipe/: .gitignore  Cargo.toml
stellar-swipe/contracts/auto_trade/: Cargo.toml
stellar-swipe/contracts/auto_trade/src/: auth.rs  errors.rs  history.rs  lib.rs  portfolio.rs  risk.rs  sdex.rs  storage.rs  test.rs
stellar-swipe/contracts/common/src/: assets.rs
stellar-swipe/contracts/oracle/: Cargo.toml  Makefile  README.md
stellar-swipe/contracts/oracle/src/: errors.rs  events.rs  external_adapter.rs  interface.rs  lib.rs  reputation.rs  test.rs  types.rs
stellar-swipe/contracts/signal_registry/: COLLABORATION_CHECKLIST.md  COLLABORATION_IMPLEMENTATION.md  COLLABORATION_INTEGRATION.md  COLLABORATION_OVERVIEW.md  COLLABORATION_README.md  COLLABORATION_SUMMARY.md  Cargo.toml  IMPORT_IMPLEMENTATION.md  IMPORT_QUICKSTART.md
stellar-swipe/contracts/signal_registry/src/: admin.rs  categories.rs  collaboration.rs  combos.rs  errors.rs  events.rs  expiry.rs  fees.rs  import.rs  lib.rs  performance.rs  query.rs  social.rs  stake.rs  submission.rs  templates.rs  test.rs  test_categories.rs  test_collaboration.rs  test_combos.rs  test_import.rs  test_performance.rs  types.rs
stellar-swipe/contracts/signal_registry/test_snapshots/test/: create_and_read_signal.1.json  provider_stats_initialized.1.json
stellar-swipe/contracts/stellar-swipe/src/: lib.rs  types.rs
(+4 files in other folders)
